# dl_cpp

./: .gitignore  README.md
cpp_mlp/: CMakeLists.txt
cpp_mlp/include/: data.hpp  data_handler.hpp
cpp_mlp/src/: Makefile  data.cc  data_handler.cc  imgui.ini  mlp.cc
include/: data.hpp  data_handler.hpp  mlp.h
notes/: Dataset and ETL.md
src/: data.cc  data_handler.cc  mlp.cc
